# OpenCV

./: .gitignore  README.md
Bluring/: CMakeLists.txt  CMakePresets.json  config.json  main.cpp  setPath.bat  setup.bat
Bluring/src/App/: main.cpp
Bluring/src/App/CApplicationManager/: CApplicationManager.cpp  CApplicationManager.h
Bluring/src/App/CImageConfig/: CImageConfig.cpp  CImageConfig.h
Bluring/src/App/CImageObject/: CImageObject.cpp  CImageObject.h
Bluring/src/App/CLogger/: CLogger.h
Bluring/src/libs/BlurCustom/: BlurCustom.cpp  CMakeLists.txt
Bluring/src/libs/BlurOpenCV/: BlurOpenCV.cpp  CMakeLists.txt
Perf_Bench/: OpenCV.diagsession  Process.xlsx
result_files/: config.json
